--- a/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
@@ -530,6 +530,7 @@
                     <input type="hidden" name="MaxPrice" value="@ViewBag.MaxPrice" />
                     <input type="hidden" name="MinCaratWeight" value="@ViewBag.MinCaratWeight" />
                     <input type="hidden" name="MaxCaratWeight" value="@ViewBag.MaxCaratWeight" />
+                    <input type="hidden" name="sortBy" value="@ViewBag.SelectedSort" />
                     if (ViewBag.CurrentPage > 3)
                     {
                         <li class="page-item">
