--- a/ProjectDiamondShop/Views/ForgotPassword/ForgotPassword.cshtml
+++ b/ProjectDiamondShop/Views/ForgotPassword/ForgotPassword.cshtml
@@ -4,19 +4,44 @@
 }
 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <style>
+    body {
+        background-color: #3AAFA9;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    .auth-links {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 10px;
+    }
+
     .img-fluid-custom {
-        max-height: 100%;
-        object-fit: cover;
+        max-height: 50%;
+        object-fit: contain;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .container {
+        flex: 1;
+    }
+
+    .card {
+        margin-top: 100px;
+        margin-bottom: 66px;
     }
 </style>
-<section class="bg-light p-3 p-md-4 p-xl-5">
+<section>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-xxl-11">
                 <div class="card border-light-subtle shadow-sm">
                     <div class="row g-0">
-                        <div class="col-12 col-md-6">
-                            <img class="img-fluid rounded-start w-100 img-fluid-custom" src="/Image/HomePage/Logo/SafeIcon.jpg" alt="Welcome back you've been missed!">
+                        <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+                            <img class="img-fluid rounded-start img-fluid-custom" src="/Image/HomePage/Logo/ResetPassword.png" alt="Password Reset">
                         </div>
                         <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
                             <div class="col-12 col-lg-11 col-xl-10">
@@ -24,11 +49,6 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="mb-5">
-                                                <div class="text-center mb-4">
-                                                    <a href="#!">
-                                                        <img src="/Image/HomePage/Logo/SafeIcon.jpg" alt="The Diamond Shop" width="175" height="57">
-                                                    </a>
-                                                </div>
                                                 <h2 class="h4 text-center">Password Reset</h2>
                                                 <h3 class="fs-6 fw-normal text-secondary text-center m-0">Provide the email address associated with your account to recover your password.</h3>
                                             </div>
@@ -53,9 +73,9 @@
                                     }
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-5">
+                                            <div class="auth-links">
                                                 <a href="@Url.Action("Index", "Login")" class="link-secondary text-decoration-none">Login</a>
-                                                <a href="@Url.Action("Index", "Login")" class="link-secondary text-decoration-none">Register</a>
+                                                <a href="@Url.Action("Index", "Login", new { view = "signup" })" class="link-secondary text-decoration-none">Register</a>
                                             </div>
                                         </div>
                                     </div>
@@ -68,3 +88,5 @@
         </div>
     </div>
 </section>
+
+
