--- a/ProjectDiamondShop/Views/ForgotPassword/ResetPassword.cshtml
+++ b/ProjectDiamondShop/Views/ForgotPassword/ResetPassword.cshtml
@@ -3,14 +3,38 @@
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
 }
 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<section class="bg-light p-3 p-md-4 p-xl-5">
+<style>
+    body {
+        background-color: #3AAFA9;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    .img-fluid-custom {
+        max-height: 50%;
+        object-fit: contain;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .card {
+        margin-top: 100px;
+        margin-bottom: 66px;
+    }
+
+    .container {
+        flex: 1;
+    }
+</style>
+<section>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-xxl-11">
                 <div class="card border-light-subtle shadow-sm">
                     <div class="row g-0">
-                        <div class="col-12 col-md-6">
-                            <img class="img-fluid rounded-start w-100 img-fluid-custom" src="/Image/HomePage/Logo/SafeIcon.jpg" alt="Welcome back you've been missed!">
+                        <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+                            <img class="img-fluid rounded-start img-fluid-custom" src="/Image/HomePage/Logo/ResetPassword.png" alt="Welcome back you've been missed!">
                         </div>
                         <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
                             <div class="col-12 col-lg-11 col-xl-10">
@@ -18,11 +42,6 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="mb-5">
-                                                <div class="text-center mb-4">
-                                                    <a href="#!">
-                                                        <img src="/Image/HomePage/Logo/SafeIcon.jpg" alt="The Diamond Shop" width="175" height="57">
-                                                    </a>
-                                                </div>
                                                 <h2 class="h4 text-center">Reset Password</h2>
                                                 <h3 class="fs-6 fw-normal text-secondary text-center m-0">Enter your new password below.</h3>
                                             </div>
