--- a/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
+++ b/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
@@ -18,68 +18,68 @@
             max-width: 95%;
         }
 
-        .navbar .navbar-brand {
-            color: #28a745 !important;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-        }
+            .navbar .navbar-brand {
+                color: #28a745 !important;
+                font-weight: bold;
+                display: flex;
+                align-items: center;
+            }
 
-        .navbar .navbar-brand img {
-            height: 40px;
-            border-radius: 50%;
-            margin-right: 10px;
-        }
+                .navbar .navbar-brand img {
+                    height: 40px;
+                    border-radius: 50%;
+                    margin-right: 10px;
+                }
 
-        .navbar .nav-link {
-            color: #333 !important;
-            font-weight: bold;
-            margin-right: 20px;
-            position: relative;
-        }
+            .navbar .nav-link {
+                color: #333 !important;
+                font-weight: bold;
+                margin-right: 20px;
+                position: relative;
+            }
 
-        .navbar .nav-link:hover,
-        .navbar .nav-link.active {
-            color: #000 !important;
-        }
+                .navbar .nav-link:hover,
+                .navbar .nav-link.active {
+                    color: #000 !important;
+                }
 
-            .navbar .nav-link:not(.dropdown-toggle)::after {
-                content: '';
-                display: block;
-                width: 0;
-                height: 2px;
+                .navbar .nav-link:not(.dropdown-toggle)::after {
+                    content: '';
+                    display: block;
+                    width: 0;
+                    height: 2px;
+                    background: #28a745;
+                    transition: width .3s;
+                    position: absolute;
+                    bottom: 0; /* Position it at the bottom of the nav link */
+                    left: 0;
+                }
+
+                .navbar .nav-link:not(.dropdown-toggle):hover::after,
+                .navbar .nav-link:not(.dropdown-toggle).active::after {
+                    width: 100%;
+                }
+
+            .navbar .login-btn {
                 background: #28a745;
-                transition: width .3s;
-                position: absolute;
-                bottom: 0; /* Position it at the bottom of the nav link */
-                left: 0;
+                color: #fff !important;
+                border-radius: 50px;
+                padding: 0.5rem 1rem;
+                font-weight: bold;
+                transition: background-color 0.3s;
             }
 
-            .navbar .nav-link:not(.dropdown-toggle):hover::after,
-            .navbar .nav-link:not(.dropdown-toggle).active::after {
-                width: 100%;
-            }
-
-        .navbar .login-btn {
-            background: #28a745;
-            color: #fff !important;
-            border-radius: 50px;
-            padding: 0.5rem 1rem;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-
-        .navbar .login-btn:hover {
-            background: #218838;
-        }
+                .navbar .login-btn:hover {
+                    background: #218838;
+                }
 
         .navbar-toggler {
             border: none;
         }
 
-        .navbar-toggler:focus {
-            outline: none;
-        }
+            .navbar-toggler:focus {
+                outline: none;
+            }
 
         /* Ensure the icon does not move when the dropdown is toggled */
         .nav-item .dropdown-toggle {
@@ -118,6 +118,7 @@
         body {
             display: flex;
             flex-direction: column;
+            background-color: #E9F2EB;
         }
 
         .container {
@@ -211,7 +212,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a  class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
                             </ul>
                         </li>
@@ -277,6 +278,11 @@
 
         $('.close').click(function () {
             console.log('Close button clicked');
+            $('#loginSuccessModal').modal('hide');
+        });
+
+        $('#modalOkButton').click(function () {
+            console.log('OK button clicked');
             $('#loginSuccessModal').modal('hide');
         });
     </script>
