--- a/ProjectDiamondShop/Views/Manager/Index.cshtml
+++ b/ProjectDiamondShop/Views/Manager/Index.cshtml
@@ -142,6 +142,7 @@
                 <button type="button" class="btn btn-primary col-12 col-sm-6 col-md-4 col-lg-2 m-1" onclick="showSection('createAccount')">Create Account</button>
             }
             <a href="@Url.Action("CreateVoucher", "Manager")" class="btn btn-primary col-12 col-sm-6 col-md-4 col-lg-2 m-1">Create Voucher</a>
+            <a href="@Url.Action("AddDiamond", "Diamonds")" class="btn btn-primary col-12 col-sm-6 col-md-4 col-lg-2 m-1">Create Voucher</a>
             <a href="@Url.Action("Logout", "Login")" class="btn btn-danger col-12 col-sm-6 col-md-4 col-lg-2 m-1">Logout</a>
         </div>
 
