đã fix lại search có khoảng trắn thì vẫn search được product

--- a/ProjectDiamondShop/Views/Login/LoginPage.cshtml
+++ b/ProjectDiamondShop/Views/Login/LoginPage.cshtml
@@ -578,6 +578,11 @@
         $('.close').click(function () {
             $('#loginSuccessModal').modal('hide');
         });
+
+        $('.OK').click(function () {
+            $('#loginSuccessModal').modal('hide');
+        });
+
     </script>
 </body>
 </html>
