--- a/ProjectDiamondShop/Views/Introduce/Round.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Round.cshtml
@@ -16,8 +16,8 @@
         }
 
         body {
-            background-color: #E9F2EB;
-            color: #333;
+            background-color: #222;
+            color: #e0e0e0;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -28,14 +28,12 @@
         }
 
         .navbar {
-            background: #fff !important;
+            background: #333 !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
-            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
-            max-width: 95%;
         }
 
             .navbar .navbar-brand {
@@ -52,7 +50,7 @@
                 }
 
             .navbar .nav-link {
-                color: #333 !important;
+                color: #fff !important;
                 font-weight: bold;
                 margin-right: 20px;
                 position: relative;
@@ -60,7 +58,7 @@
 
                 .navbar .nav-link:hover,
                 .navbar .nav-link.active {
-                    color: #000 !important;
+                    color: #ddd !important;
                 }
 
                 .navbar .nav-link:not(.dropdown-toggle)::after {
@@ -71,7 +69,7 @@
                     background: #28a745;
                     transition: width .3s;
                     position: absolute;
-                    bottom: 0; /* Position it at the bottom of the nav link */
+                    bottom: 0;
                     left: 0;
                 }
 
@@ -136,10 +134,10 @@
         }
 
         .footer {
-            background-color: #fff;
+            background-color: #333;
             padding: 20px 0;
             text-align: center;
-            color: #333;
+            color: #FFD700;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             bottom: 0;
@@ -148,13 +146,13 @@
         }
 
             .footer a {
-                color: #00509e;
+                color: #FFD700;
                 text-decoration: none;
                 margin: 0 10px;
             }
 
                 .footer a:hover {
-                    color: #003f7d;
+                    color: #FFF;
                     text-decoration: underline;
                 }
 
