--- a/ProjectDiamondShop/Views/Introduce/Oval.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Oval.cshtml
@@ -16,8 +16,8 @@
         }
 
         body {
-            background-color: #E9F2EB;
-            color: #333;
+            background-color: #222;
+            color: #e0e0e0;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -28,14 +28,12 @@
         }
 
         .navbar {
-            background: #fff !important;
+            background: #333 !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
-            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
-            max-width: 95%;
         }
 
             .navbar .navbar-brand {
@@ -52,7 +50,7 @@
                 }
 
             .navbar .nav-link {
-                color: #333 !important;
+                color: #fff !important;
                 font-weight: bold;
                 margin-right: 20px;
                 position: relative;
@@ -60,7 +58,7 @@
 
                 .navbar .nav-link:hover,
                 .navbar .nav-link.active {
-                    color: #000 !important;
+                    color: #ddd !important;
                 }
 
                 .navbar .nav-link:not(.dropdown-toggle)::after {
@@ -71,7 +69,7 @@
                     background: #28a745;
                     transition: width .3s;
                     position: absolute;
-                    bottom: 0; /* Position it at the bottom of the nav link */
+                    bottom: 0;
                     left: 0;
                 }
 
@@ -136,10 +134,10 @@
         }
 
         .footer {
-            background-color: #fff;
+            background-color: #333;
             padding: 20px 0;
             text-align: center;
-            color: #333;
+            color: #FFD700;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             bottom: 0;
@@ -148,13 +146,13 @@
         }
 
             .footer a {
-                color: #00509e;
+                color: #FFD700;
                 text-decoration: none;
                 margin: 0 10px;
             }
 
                 .footer a:hover {
-                    color: #003f7d;
+                    color: #FFF;
                     text-decoration: underline;
                 }
 
@@ -309,7 +307,7 @@
 
         <div class="container center">
             <div class="row">
-                <p class="decription justify">
+                <p class="description justify">
                     An oval cut diamond provides excellent brilliance, durability and style.
                     We recommend an H color or better and an SI1 or SI2 for clarity for this diamond shape.
                     However, it’s crucial to be mindful of the ‘bowtie effect’ in oval diamonds, a potential dark area in the diamond’s center.
@@ -322,7 +320,7 @@
                 </p>
 
                 <h1>The Oval Cut Diamond</h1>
-                <p class="decription justify">
+                <p class="description justify">
                     Bursting with brilliance and fire, an oval cut diamond is exquisite and unique. The oval is considered a “fancy” shape; the elongated design makes it appear larger than other shapes of the same carat weight.
                     For example, a 1ct oval cut looks quite large in a halo setting. But a <a href="https://www.diamonds.pro/education/1-carat-diamond-ring/" data-wpel-link="internal">1 carat</a> round diamond in a similar setting would look slightly smaller.
                     The slender body of the oval diamond creates a beautiful, elongated look. It often makes the hand and fingers appear slimmer. The diamond’s shape has no sharp corners, so it’s less prone to chipping.
@@ -332,7 +330,7 @@
                     <img src="~/Image/Introlmage/oval1.jpg" alt="The Oval Cut Diamond">
                 </div>
                 <h2 class="wp-block-heading">History of the Oval Cut Diamond</h2>
-                <p class="decription justify">
+                <p class="description justify">
                     Oval shaped diamonds have been popular for centuries.
                     The earliest oval diamonds date back to the 1300s, though they aren’t described by name in literature until the 1800s.
                     According to <a href="https://www.diamonds.net/News/NewsItem.aspx?ArticleID=2309&amp;ArticleTitle=Fancy+Shape+Series--Oval" data-wpel-link="external" target="_blank" rel="external noopener">Rapaport</a>, in the early 1960’s, a Russian diamond cutter named <a href="https://www.ehudlaniado.com/home/index.php/news/entry/the-amazing-story-of" data-wpel-link="external" target="_blank" rel="external noopener">Lazare Kaplan</a> perfected the oval cut process.
@@ -342,14 +340,14 @@
                 </p>
             </div>
             <h2 class="wp-block-heading" id="h-heart-shaped-diamond-color">Oval Cut Diamond – Color</h2>
-            <p class="decription justify">
+            <p class="description justify">
                 Color is graded by the GIA on a <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color scale</a> from D to Z.
                 When a diamond has a Z Color grade, it means the diamond contains an easily noticeable brown or yellow tint.
                 On the other end of the scale, the D grade represents the most colorless a diamond can be.
                 While it’s usually impossible to see <a href="https://www.jamesallen.com/education/diamonds/4cs-color/?a_aid=dmnd1357&amp;data1=19382" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">the difference between two color grades</a>, the difference in price can be significant.
                 As it is difficult to notice the differences between color grades with the naked eye, we recommend focusing on how the color appears to you.
             </p>
-            <p class="decription justify">
+            <p class="description justify">
                 As a general guideline, we recommend an H color or better for oval cut diamonds.
                 This ensures your stone will look white in a <a href="https://www.diamonds.pro/education/platinum-vs-gold/" data-wpel-link="internal">white gold or platinum</a> setting.
                 If you’re setting your diamond in <a href="https://www.diamonds.pro/education/platinum-vs-gold/" data-wpel-link="internal">yellow gold or rose gold</a>, feel free to drop down to a J or K to save money or to buy a larger stone.
@@ -359,13 +357,14 @@
                 <img src="~/Image/Introlmage/oval2.jpg" alt="Oval Cut Diamond – Color" style="width: 50%;">
             </div>
         </div>
-        <footer>
-            <hr />
+        <footer class="footer">
             <div class="container text-center">
                 <p><a href="#">Back To Top</a></p>
                 <p>&copy; 2024 The Diamond Shop. All rights reserved.</p>
                 <p>
-                    <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Refund Policy</a>
+                    <a href="#">Terms of Service</a> |
+                    <a href="#">Privacy Policy</a> |
+                    <a href="#">Refund Policy</a>
                 </p>
             </div>
         </footer>
@@ -387,7 +386,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
